--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
+@import url("header.css");
+
 :root {
     --cor-de-fundo: #EBECEE;
+    --branco: #f5f5f5;
 }
 body {
     background-color: var(--cor-de-fundo);
@@ -7,5 +10,3 @@ body {
 h1 {
     background-color: white;
 }
-
-
